# beanfmt

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README.zh-CN.md  beanfmt.schema.json  beanfmt.toml  justfile  lefthook.yml  pyproject.toml
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release-vscode.yml  release.yml
editors/code/: .gitignore  .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
editors/code/src/: beanfmt-wasm.d.ts  extension.ts  husk-wasm.d.ts  toml.d.ts
editors/code/wasm/: beanfmt.d.ts
src/: align.rs  config.rs  lib.rs  line.rs  normalize.rs  options.rs  recursive.rs  sort.rs  wasm.rs
src/cli/: main.rs
src/python/: mod.rs
tests/: align_test.rs  integration_test.rs  line_test.rs  normalize_test.rs  python_config_test.py  recursive_test.rs  sort_test.rs
tests/fixtures/: basic.beancount  cjk.beancount  normalize.beancount
