[package]
name = "husk"
version = "0.1.0"
edition = "2024"
description = "A fast beancount file formatter with CJK support"
license = "MIT"

[lib]
name = "husk"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "husk"
path = "src/cli/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:glob"]
wasm = ["dep:wasm-bindgen"]
python = ["dep:pyo3", "dep:glob"]

[dependencies]
regex = { version = "1", default-features = false, features = ["std", "unicode-perl", "unicode-gencat"] }
unicode-width = "0.2"

[dependencies.clap]
version = "4"
features = ["derive"]
optional = true

[dependencies.glob]
version = "0.3"
optional = true

[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[dependencies.pyo3]
version = "0.24"
optional = true
features = ["extension-module", "abi3-py39"]

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
