[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "husk"
description = "A fast beancount file formatter with CJK support"
license = { text = "MIT" }
requires-python = ">=3.9"
dynamic = ["version"]

[tool.maturin]
features = ["python"]
module-name = "husk"
bindings = "pyo3"
strip = true
