[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "beanfmt"
description = "A fast beancount file formatter with CJK support"
license = { text = "MIT" }
requires-python = ">=3.9"
dynamic = ["version"]

[tool.uv]
managed = true

[tool.maturin]
features = ["python"]
module-name = "beanfmt"
bindings = "pyo3"
strip = true
